--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,11 @@ textarea{
 #container{
     width: 90vw;
     max-width: 700px;
-    border: 1px solid red;
-    padding: 40px;
-    margin: 40px;
+    /*border: 1px solid red;*/
+}
+
+@media (min-width: 700px){
+    :root{
+        font-size: 62.5%;
+    }
 }
